// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move can move: #0 initial state 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
    ],
  },
  Object {
    "id": "bd",
    "question": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move: #1 move c-1 to a-3 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bc",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
    ],
  },
  Object {
    "id": "bd",
    "question": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move: #2 move c-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "question": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move: #3 move b-1 to c-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "question": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can move: #4 move d-0 to a-0 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      undefined,
      Object {
        "content": "blaa",
        "id": "qf",
      },
      Object {
        "content": "blaaaa",
        "id": "qh",
      },
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
      Object {
        "content": "blab",
        "id": "qc",
      },
      Object {
        "content": "blabb",
        "id": "qi",
      },
      Object {
        "content": "bli",
        "id": "qd",
      },
    ],
  },
  Object {
    "id": "bb",
    "questions": Immutable.List [
      Object {
        "content": "bleb",
        "id": "qe",
      },
      Object {
        "content": "blaaa",
        "id": "qg",
      },
    ],
  },
  Object {
    "id": "bd",
    "question": Immutable.List [
      Object {
        "content": "blub",
        "id": "qj",
      },
    ],
  },
]
`;

exports[`move can reorder 1`] = `
Immutable.List [
  Object {
    "id": "ba",
    "questions": Immutable.List [
      Object {
        "content": "bla",
        "id": "qa",
      },
      Object {
        "content": "blee",
        "id": "qc",
      },
      Object {
        "content": "blii",
        "id": "qd",
      },
      Object {
        "content": "blu",
        "id": "qb",
      },
    ],
  },
]
`;
